--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^1.0.0-next.23",
-		"date-fns": "^2.22.1"
+		"date-fns": "^2.22.1",
+		"date-fns-tz": "^1.1.4"
 	}
 }
