--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^1.0.0-next.23",
 		"date-fns": "^2.22.1",
-		"date-fns-tz": "^1.1.4"
+		"date-fns-tz": "^1.1.4",
+		"query-string": "^7.0.1"
 	}
 }
