--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"build": "npm run tailwind:build && npm run build:only"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.123",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"autoprefixer": "^10.2.6",
@@ -28,7 +28,7 @@
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"svelte": "^3.34.0",
-		"svelte-check": "^2.0.0",
+		"svelte-check": "^2.2.1",
 		"svelte-preprocess": "^4.0.0",
 		"tailwindcss": "^2.2.4",
 		"tslib": "^2.0.0",
@@ -36,7 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^1.0.0-next.23",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.24",
 		"date-fns": "^2.22.1",
 		"date-fns-tz": "^1.1.4",
 		"query-string": "^7.0.1"
