--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.0",
 		"postcss-cli": "^8.3.1",
-		"prettier": "~2.3.2",
+		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.3.1",
 		"svelte": "^3.38.3",
 		"svelte-check": "^2.2.3",
