--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write --plugin-search-dir=. .",
-		"dev:only": "svelte-kit dev",
-		"build:only": "svelte-kit build",
-		"preview": "svelte-kit preview",
+		"dev:only": "vite dev",
+		"build:only": "vite build",
+		"preview": "vite preview",
 		"tailwind:watch": "cross-env TAILWIND_MODE=watch cross-env NODE_ENV=development postcss src/styles/tailwind.css -o src/styles/tailwind-output.css -w",
 		"tailwind:build": "cross-env TAILWIND_MODE=build cross-env NODE_ENV=production  postcss src/styles/tailwind.css -o src/styles/tailwind-output.css",
 		"dev": "concurrently \"npm run dev:only\" \"npm run tailwind:watch\"",
@@ -24,7 +24,7 @@
 		"eslint": "^8.18.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss-cli": "^9.1.0",
+		"postcss-cli": "^10.0.0",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.48.0",
@@ -32,7 +32,8 @@
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.3",
 		"tslib": "^2.4.0",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.4",
+		"vite": "^2.9.14"
 	},
 	"type": "module",
 	"dependencies": {
