--- a/package.json
+++ b/package.json
@@ -15,31 +15,31 @@
 		"build": "npm run tailwind:build && npm run build:only"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^1.0.0-next.350",
-		"@typescript-eslint/eslint-plugin": "^5.29.0",
-		"@typescript-eslint/parser": "^5.29.0",
-		"autoprefixer": "^10.4.7",
-		"concurrently": "^7.2.2",
+		"@sveltejs/kit": "^1.0.7",
+		"@typescript-eslint/eslint-plugin": "^5.48.0",
+		"@typescript-eslint/parser": "^5.48.0",
+		"autoprefixer": "^10.4.13",
+		"concurrently": "^7.6.0",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.18.0",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint": "^8.31.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss-cli": "^10.0.0",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.48.0",
-		"svelte-check": "^2.7.2",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.3",
-		"tslib": "^2.4.0",
-		"typescript": "^4.7.4",
-		"vite": "^3.0.1"
+		"postcss-cli": "^10.1.0",
+		"prettier": "^2.8.2",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.0",
+		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^5.0.0",
+		"tailwindcss": "^3.2.4",
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.4",
+		"vite": "^4.0.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^1.0.0-next.58",
-		"date-fns": "^2.28.0",
-		"date-fns-tz": "^1.3.5",
-		"query-string": "^7.1.1"
+		"@sveltejs/adapter-vercel": "^1.0.1",
+		"date-fns": "^2.29.3",
+		"date-fns-tz": "^1.3.7",
+		"query-string": "^8.1.0"
 	}
 }
