--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
 		"cross-env": "^7.0.3",
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.9.0",
-		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss-cli": "^10.1.0",
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.3",
@@ -40,6 +39,7 @@
 		"@sveltejs/adapter-vercel": "^3.0.2",
 		"date-fns": "^2.30.0",
 		"date-fns-tz": "^2.0.0",
+		"eslint-plugin-svelte": "^2.32.4",
 		"query-string": "^8.1.0"
 	}
 }
