--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@ethercorps/sveltekit-og": "^3.0.0",
 		"@sveltejs/adapter-vercel": "^5.1.0",
 		"date-fns": "^3.3.1",
 		"eslint-plugin-svelte": "^2.35.1",
