--- a/package.json
+++ b/package.json
@@ -15,31 +15,31 @@
 		"build": "npm run tailwind:build && npm run build:only"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^2.5.28",
-		"@typescript-eslint/eslint-plugin": "^8.7.0",
-		"@typescript-eslint/parser": "^8.7.0",
+		"@sveltejs/kit": "^2.8.0",
+		"@typescript-eslint/eslint-plugin": "^8.14.0",
+		"@typescript-eslint/parser": "^8.14.0",
 		"autoprefixer": "^10.4.20",
-		"concurrently": "^9.0.1",
+		"concurrently": "^9.1.0",
 		"cross-env": "^7.0.3",
-		"eslint": "^9.11.1",
+		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
 		"postcss-cli": "^11.0.0",
 		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
-		"svelte": "^4.2.19",
-		"svelte-check": "^4.0.2",
-		"svelte-preprocess": "^6.0.2",
-		"tailwindcss": "^3.4.13",
-		"tslib": "^2.7.0",
-		"typescript": "^5.6.2",
-		"vite": "^5.4.7"
+		"prettier-plugin-svelte": "^3.2.8",
+		"svelte": "^5.1.15",
+		"svelte-check": "^4.0.7",
+		"svelte-preprocess": "^6.0.3",
+		"tailwindcss": "^3.4.14",
+		"tslib": "^2.8.1",
+		"typescript": "^5.6.3",
+		"vite": "^5.4.11"
 	},
 	"type": "module",
 	"dependencies": {
-		"@ethercorps/sveltekit-og": "^3.0.0",
-		"@sveltejs/adapter-vercel": "^5.4.4",
+		"@ethercorps/sveltekit-og": "^4.0.0-next.1",
+		"@sveltejs/adapter-vercel": "^5.4.7",
 		"date-fns": "^4.1.0",
-		"eslint-plugin-svelte": "^2.44.0",
-		"query-string": "^9.1.0"
+		"eslint-plugin-svelte": "^2.46.0",
+		"query-string": "^9.1.1"
 	}
 }
