--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"tailwind:watch": "cross-env TAILWIND_MODE=watch cross-env NODE_ENV=development postcss src/styles/tailwind.css -o src/styles/tailwind-output.css -w",
 		"tailwind:build": "cross-env TAILWIND_MODE=build cross-env NODE_ENV=production  postcss src/styles/tailwind.css -o src/styles/tailwind-output.css",
 		"dev": "concurrently \"npm run dev:only\" \"npm run tailwind:watch\"",
-		"build": "npm run tailwind:build && npm run build:only"
+		"build": "npm run tailwind:build && npm run build:only",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^2.10.1",
@@ -32,7 +33,8 @@
 		"tailwindcss": "^3.4.16",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.2",
-		"vite": "^6.0.3"
+		"vite": "^6.0.3",
+		"vitest": "^2.1.8"
 	},
 	"type": "module",
 	"dependencies": {
