--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^2.15.3",
+		"@tailwindcss/postcss": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.16",
 		"@typescript-eslint/eslint-plugin": "^8.20.0",
 		"@typescript-eslint/parser": "^8.20.0",
-		"autoprefixer": "^10.4.20",
 		"concurrently": "^9.1.2",
 		"cross-env": "^7.0.3",
 		"eslint": "^9.18.0",
@@ -31,7 +31,7 @@
 		"svelte": "^5.18.0",
 		"svelte-check": "^4.1.4",
 		"svelte-preprocess": "^6.0.3",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.0",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3",
 		"vite": "^6.0.7",
