--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"test": "vitest"
+		"test": "vitest",
+		"out": "bun outdated"
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^2.15.3",
