--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"scripts": {
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write --plugin-search-dir=. .",
+		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
+		"format": "prettier --write .",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
