--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "preprocessors",
-        "sveltejs",
-        "vite"
-    ]
+	"cSpell.words": ["preprocessors", "sveltejs", "vite"]
 }
