--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
+		"lint": "prettier --check . && eslint . && eslint .",
 		"format": "prettier --write .",
 		"dev": "vite dev",
 		"build": "vite build",
@@ -13,6 +13,8 @@
 		"out": "bun outdated"
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
 		"@sveltejs/kit": "^2.21.1",
 		"@tailwindcss/postcss": "^4.1.7",
 		"@tailwindcss/typography": "^0.5.16",
@@ -20,8 +22,10 @@
 		"@typescript-eslint/parser": "^8.32.1",
 		"concurrently": "^9.1.2",
 		"cross-env": "^7.0.3",
-		"eslint": "^9.27.0",
-		"eslint-config-prettier": "^10.1.5",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^3.0.0",
+		"globals": "^16.0.0",
 		"postcss-cli": "^11.0.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -31,6 +35,7 @@
 		"tailwindcss": "^4.1.7",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.20.0",
 		"vite": "^6.3.5",
 		"vitest": "^3.1.4"
 	},
@@ -40,7 +45,6 @@
 		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@tailwindcss/vite": "^4.1.7",
 		"date-fns": "^4.1.0",
-		"eslint-plugin-svelte": "^3.9.0",
 		"query-string": "^9.2.0"
 	},
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
