--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-.DS_Store
 node_modules
-/.svelte-kit
-/package
-/.svelte
-/.vercel_build_output
-/.vercel
+
+# Output
+.output
 .vercel
+.netlify
+.wrangler
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
