--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,6 @@
-.svelte-kit/**
-static/**
-build/**
-node_modules/**
+# Package Managers
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+bun.lock
+bun.lockb
