--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.6"
+		"vite": "^6.2.6",
+		"vitest": "^3.1.4"
 	},
 	"type": "module"
 }
