--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 	"devDependencies": {
 		"@eslint/compat": "^2.0.0",
 		"@eslint/js": "^9.39.1",
-		"@ethercorps/sveltekit-og": "^4.0.0-next.1",
-		"@sveltejs/adapter-vercel": "^6.1.1",
-		"@sveltejs/kit": "^2.48.6",
+		"@ethercorps/sveltekit-og": "^4.1.0",
+		"@sveltejs/adapter-vercel": "^6.1.2",
+		"@sveltejs/kit": "^2.49.0",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.17",
@@ -30,13 +30,13 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
-		"svelte": "^5.43.13",
+		"svelte": "^5.43.14",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.47.0",
 		"vite": "^7.2.4",
-		"vitest": "^4.0.12"
+		"vitest": "^4.0.13"
 	},
 	"type": "module"
 }
